Add circleci 2.0 config
- Move to jdk 11 (and fix deprecations due to it)
- Add a "run locally" shell script